Fix overflow

--- a/app/components/sections/landing-section/styles.styl
+++ b/app/components/sections/landing-section/styles.styl
@@ -17,6 +17,7 @@ img
   bottom: 0
 
 .backdrop-container
+  overflow: hidden
   opacity: 0
   z-index: -2
   position: absolute
